[gd_scene load_steps=15 format=2]

[ext_resource path="res://imgs/icons/user.png" type="Texture" id=1]
[ext_resource path="res://imgs/icons/key.png" type="Texture" id=2]
[ext_resource path="res://fonts/SEGOEUIB.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/SEGUIBL.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://scn/LogScreen/log_screen.gd" type="Script" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blur_amount = 2.5

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0, 0, 0, 0.109804 )
shadow_size = 7
shadow_offset = Vector2( 0, 5 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.298039, 0.298039, 0.298039, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.141176, 0.705882, 0.494118, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.298039, 0.298039, 0.298039, 1 )
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.141176, 0.705882, 0.494118, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 3 )

[node name="LogScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="LogPanel" type="PanelContainer" parent="."]
anchor_left = 0.312
anchor_top = 0.5
anchor_right = 0.687
anchor_bottom = 0.5
margin_left = 0.511993
margin_top = -169.5
margin_right = 0.511963
margin_bottom = 169.5
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogContainer" type="VBoxContainer" parent="LogPanel"]
margin_left = 20.0
margin_top = 10.0
margin_right = 364.0
margin_bottom = 329.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="LogPanel/LogContainer"]
margin_right = 344.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Sign In / Sign Up"
align = 1

[node name="HSeparator" type="HSeparator" parent="LogPanel/LogContainer"]
margin_top = 43.0
margin_right = 344.0
margin_bottom = 53.0
custom_styles/separator = SubResource( 5 )
custom_constants/separation = 10

[node name="UserData" type="VBoxContainer" parent="LogPanel/LogContainer"]
margin_top = 68.0
margin_right = 344.0
margin_bottom = 156.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Email" type="LineEdit" parent="LogPanel/LogContainer/UserData"]
margin_right = 344.0
margin_bottom = 34.0
size_flags_vertical = 5
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
clear_button_enabled = true
right_icon = ExtResource( 1 )
placeholder_text = "email"

[node name="Password" type="LineEdit" parent="LogPanel/LogContainer/UserData"]
margin_top = 54.0
margin_right = 344.0
margin_bottom = 88.0
size_flags_vertical = 5
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
secret = true
clear_button_enabled = true
right_icon = ExtResource( 2 )
placeholder_text = "password"

[node name="Error" type="Label" parent="LogPanel/LogContainer"]
visible = false
margin_top = 176.0
margin_right = 344.0
margin_bottom = 190.0
custom_colors/font_color = Color( 1, 0, 0.235294, 1 )
align = 1
autowrap = true

[node name="SignInBtn" type="Button" parent="LogPanel/LogContainer"]
margin_left = 125.0
margin_top = 171.0
margin_right = 218.0
margin_bottom = 204.0
size_flags_horizontal = 4
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "Sign In"

[node name="HSeparator2" type="HSeparator" parent="LogPanel/LogContainer"]
margin_top = 219.0
margin_right = 344.0
margin_bottom = 234.0
custom_styles/separator = SubResource( 5 )
custom_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="LogPanel/LogContainer"]
margin_top = 249.0
margin_right = 344.0
margin_bottom = 319.0

[node name="Label" type="Label" parent="LogPanel/LogContainer/VBoxContainer"]
margin_right = 344.0
margin_bottom = 14.0
text = "Test Credentials:"

[node name="LineEdit" type="LineEdit" parent="LogPanel/LogContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 344.0
margin_bottom = 42.0
text = "test@testmail.mail"
editable = false

[node name="LineEdit2" type="LineEdit" parent="LogPanel/LogContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 344.0
margin_bottom = 70.0
text = "testmailpassword"
editable = false
[connection signal="pressed" from="LogPanel/LogContainer/SignInBtn" to="." method="_on_SignInBtn_pressed"]
